inefficient Constructor, use static Byte, Integer, Character.valueOf() method instead